[metadata]
name = mylint
version = 0.1.0
description = My really simple rendition of how a linter works.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/mylint
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    mylint=mylint:cli

[options.extras_require]
dev =
    black
    mypy
    pytest
